Step1: Create an Angular app

--- a/example/app/todo.html
+++ b/example/app/todo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="TodoList">
 <head>
 	<!-- To show basic of html, javascript and css -->
     <title>Simple ToDo List</title>
@@ -10,6 +10,7 @@
 
 	<script>
 		// Add your code here
+	var app = angular.module('TodoList', []);
 	</script>
 	
 </head>
