--- a/example/app/todo.html
+++ b/example/app/todo.html
@@ -11,10 +11,13 @@
 	<script>
 		// Add your code here
 	var app = angular.module('TodoList', []);
+	app.controller('TodoCtrl', function(){
+		
+	});
 	</script>
 	
 </head>
-<body>
+<body ng-controller="TodoCtrl">
     <div class="page-header">
 		<h1>Di's To Do List</h1>
     </div>
