--- a/example/app/todo.html
+++ b/example/app/todo.html
@@ -11,19 +11,19 @@
 	<script>
 		// Add your code here
 	var app = angular.module('TodoList', []);
-	app.controller('TodoCtrl', function(){
-		
+	app.controller('TodoCtrl', function($scope){
+		$scope.username = "John"
 	});
 	</script>
 	
 </head>
 <body ng-controller="TodoCtrl">
     <div class="page-header">
-		<h1>Di's To Do List</h1>
+		<h1>{{username}}'s To Do List</h1>
     </div>
     <div class="panel">
         <div class="input-group">
-			<input class="form-control"/>
+			<input class="form-control" ng-model="username"/>
 				<span class="input-group-btn">
 					<button class="btn btn-default">Add</button>
 		   </span>
