--- a/example/app/todo.html
+++ b/example/app/todo.html
@@ -19,13 +19,25 @@
  	   		{ "action": "Collect Tickets", "done": true },
   	  		{ "action": "Give a talk", "done": true },
 			{ "action": "Call Joe", "done": true }];
+			
+			$scope.incompleteCount = function(){
+				var count = 0;
+				angular.forEach($scope.tasks, function(task){
+					if(!task.done){
+						count += 1;
+					}
+				});
+				return count;
+			}
 	});
 	</script>
 	
 </head>
 <body ng-controller="TodoCtrl">
     <div class="page-header">
-		<h1>{{username}}'s To Do List</h1>
+		<h1>{{username}}'s To Do List
+		<span class="label label-default">{{incompleteCount()}}</span>
+		</h1>
     </div>
     <div class="panel">
         <div class="input-group">
