--- a/example/app/todo.html
+++ b/example/app/todo.html
@@ -43,7 +43,8 @@
 <body ng-controller="TodoCtrl">
     <div class="page-header">
 		<h1>{{username}}'s To Do List
-		<span class="label" ng-class="warningLevelClass()">{{incompleteCount()}}</span>
+		<span class="label" ng-class="warningLevelClass()" ng-hide="incompleteCount() == 0">{{incompleteCount()}}</span>
+		<span class="label" ng-class="warningLevelClass()" ng-show="incompleteCount() > 0">{{incompleteCount()}}</span>
 		</h1>
     </div>
     <div class="panel">
