--- a/example/app/todo.html
+++ b/example/app/todo.html
@@ -33,7 +33,12 @@
 					return 'label-warning';
 				
 				return 'label-success';
-			} 
+			}
+			
+			$scope.addNewTask = function(){
+				$scope.tasks.push({action: $scope.newAction, done:false});
+				$scope.newAction = '';
+			}
 	});
 	</script>
 	
@@ -46,9 +51,9 @@
     </div>
     <div class="panel">
         <div class="input-group">
-			<input class="form-control" ng-model="username"/>
+			<input class="form-control" ng-model="newAction"/>
 				<span class="input-group-btn">
-					<button class="btn btn-default">Add</button>
+					<button class="btn btn-default" ng-click="addNewTask()">Add</button>
 		   </span>
 		</div>
 		<table class="table table-striped">
