Step12: Add a checkbox to toggle showChecked, another example to show two way binding.

--- a/example/app/todo.html
+++ b/example/app/todo.html
@@ -71,6 +71,9 @@
 					<button class="btn btn-default" ng-click="addNewTask()">Add</button>
 		   </span>
 		</div>
+		<div class="checkbox-inline">
+			<input type="checkbox" ng-model="showChecked"/>
+		</div>
 		<table class="table table-striped">
 	        <thead>
                 <tr>
