--- a/example/app/todo.html
+++ b/example/app/todo.html
@@ -73,6 +73,22 @@
 			}
 		};
 	});
+	
+	app.directive('toDoList', function(){
+		return {
+			scope: {
+				tasks: '='
+			},
+			templateUrl: 'todo/todolist.html',
+			link: function(scope, element, attr){
+				scope.addNewAction = function(){
+					scope.tasks.push({action:scope.newAction, done:false});
+			
+					scope.newAction = '';
+				}
+			}
+		}
+	});
 	</script>
 	
 </head>
@@ -82,31 +98,6 @@
 		<my-badge count="incompleteCount()"/>
 		</h1>
     </div>
-    <div class="panel">
-        <div class="input-group">
-			<input class="form-control" ng-model="newAction"/>
-				<span class="input-group-btn">
-					<button class="btn btn-default" ng-click="addNewTask()">Add</button>
-		   </span>
-		</div>
-		<div class="checkbox-inline">
-			<input type="checkbox" ng-model="showChecked"/>
-		</div>
-		<table class="table table-striped">
-	        <thead>
-                <tr>
-                    <th>Description</th>
-                    <th>Done</th>
-                </tr>
-            </thead>
-            <tbody>
-				<tr ng-repeat="task in tasks | filteredTasks: showChecked | orderBy: 'action'">
-					<td>{{task.action}}</td>
-					<td><input type="checkbox" ng-model="task.done"></td>
-					<td>{{task.done}}</td>
-				</tr>
-			</tbody>
-		</table>
-    </div>
+   	<to-do-list tasks="tasks"></to-do-list>
 </body>
 </html>
